# feup-cal-proj

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  administrator_8h_source.html  administrator__manager_8h_source.html  administrator__ui_8h_source.html  algorithm_8h_source.html  annotated.html  annotated_dup.js  auth__user_8h_source.html  auth__user__manager_8h_source.html  bootstrap_8h_source.html  classAdministrator-members.html  classAdministrator.html  classAdministrator.js  classAdministratorManager-members.html  classAdministratorManager.html  classAdministratorManager.js  classAdministratorUI-members.html  classAdministratorUI.html  classAdministratorUI.js  classAdministratorUI__coll__graph.dot  classAdministratorUI__coll__graph.md5  classAdministratorUI__inherit__graph.dot  classAdministratorUI__inherit__graph.md5  classAuthUser-members.html  classAuthUser.html  classAuthUser.js  classAuthUserManager-members.html  classAuthUserManager.html  classAuthUserManager.js  classBootstrap-members.html  classBootstrap.html  classBootstrap.js  classClientCompanyRepresentativeUI-members.html  classClientCompanyRepresentativeUI.html  classClientCompanyRepresentativeUI.js  classClientCompanyRepresentativeUI__coll__graph.dot  classClientCompanyRepresentativeUI__coll__graph.md5  (+465 more)
doc/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  (+57 more)
src/: CMakeLists.txt  main.cpp
src/application/bootstrap/: bootstrap.cpp  bootstrap.h
src/application/ui/administrator/: administrator_ui.cpp  administrator_ui.h
src/application/ui/administrator/company/: company_information_ui.cpp  company_information_ui.h
src/application/ui/administrator/company_client/: companies_client_information_ui.cpp  companies_client_information_ui.h  modify_company_vehicles_ui.cpp  modify_company_vehicles_ui.h  register_company_ui.cpp  register_company_ui.h
src/application/ui/administrator/company_information/: company_information.cpp  company_information.h  company_information_ui.cpp
src/application/ui/administrator/graph/: verify_connectivity_ui.cpp  verify_connectivity_ui.h  view_world_graph_ui.cpp  view_world_graph_ui.h
src/application/ui/administrator/vehicle/: modify_vehicles_ui.cpp  modify_vehicles_ui.h  verify_vehicles_ui.cpp  verify_vehicles_ui.h
src/application/ui/client_company_representative/: client_company_representative_ui.cpp  client_company_representative_ui.h
src/application/ui/client_company_representative/company_client_information/: company_client_information.cpp  company_client_information.h  company_client_information_ui.cpp  company_client_information_ui.h
src/application/ui/client_company_representative/graph/: company_client_graph_ui.cpp  company_client_graph_ui.h
src/application/ui/client_company_representative/pickup_point/: pickup_point_ui.cpp  pickup_point_ui.h
src/application/ui/client_company_representative/pickup_points/: pickup_points_ui.cpp  pickup_points_ui.h
src/application/ui/client_company_representative/route/: view_paths_ui.cpp  view_paths_ui.h
src/application/ui/client_company_representative/vehicle/: request_vehicle_change_ui.cpp  request_vehicle_change_ui.h
src/application/ui/home/: home_ui.cpp  home_ui.h
src/application/ui/login/: login_ui.cpp  login_ui.h
src/application/ui/ui/: ui.h  ui_manager.cpp  ui_manager.h
src/auth/session/: current_session.cpp  current_session.h
src/auth/user/: auth_user.cpp  auth_user.h  auth_user_manager.cpp  auth_user_manager.h
src/company/: company.cpp
src/exception/: invalid_directory_exception.cpp  invalid_directory_exception.h  invalid_file_exception.cpp  invalid_file_exception.h  invalid_file_extension.cpp  invalid_file_extension.h  invalid_location_exception.cpp  invalid_location_exception.h  invalid_login_exception.cpp  invalid_login_exception.h  invalid_vertex_exception.cpp  invalid_vertex_exception.h
src/model/company/: company.cpp  company.h
src/model/company client/: company_client.cpp  company_client.h
src/model/company client/company representative/: representative.cpp  representative.h
src/model/company client/companyClientManager/: company_client_manager.cpp  company_client_manager.h
src/model/company/AdministratorManager/: administrator_manager.h
src/model/company/administrator/: administrator.cpp  administrator.h  administrator_manager.cpp  administrator_manager.h
src/model/company_client/: company_client.cpp  company_client.h
src/model/company_client/company_client_manager/: company_client_manager.cpp  company_client_manager.h
src/model/company_client/company_representative/: company_representative.cpp  company_representative.h
src/model/location/: location.cpp  location.h  location_manager.cpp  location_manager.h
src/util/algorithm/: algorithm.cpp  algorithm.h  algorithm.tpp  path.h  path.tpp  reduced_graph.h  trio.h  trio.tpp
src/util/gmaps/: google_map.cpp  google_map.h
src/util/graph/: cluster.cpp  cluster.h  edge.h  edge.tpp  graph.h  graph.tpp  mutable_priority_queue.h  pointer_wrapper.h  pointer_wrapper.tpp  vertex.h  vertex.tpp
src/util/string/: string_util.cpp  string_util.h  ui_util.cpp  ui_util.h  util_string.cpp  util_string.h
src/util/view_graph/: graph_view_builder.cpp  graph_view_builder.h  view_graph_viewer.cpp  view_graph_viewer.h
test/: CMakeLists.txt
test/Algorithm/: reduced_graph_test.cpp
test/auth/session/: current_session_test.cpp
test/company/: company_test.cpp
test/example/: test.cpp
test/model/company/administrator/: administrator_manager_test.cpp  administrator_test.cpp
test/model/companyClient/company_client_manager/: company_client_manager_test.cpp
test/model/company_client/: company_client_test.cpp
test/model/company_client/company_client_manager/: company_client_manager_test.cpp
test/model/company_client/company_representative/: company_representative_test.cpp
test/model/location/: location_test.cpp
test/util/algorithm/: algorithm_test.cpp  reduced_graph_test.cpp
test/util/graph/: cluster_test.cpp  edge_test.cpp  graph_test.cpp  vertex_test.cpp
test/util/string/: util_string_test.cpp
(+8 files in other folders)
